--- a/backend/templates/main/homepage.html.twig
+++ b/backend/templates/main/homepage.html.twig
@@ -16,7 +16,7 @@
                 {% for room in rooms %}
                     <div class="bg-[#16202A] rounded-2xl pl-5 py-5 pr-11 flex flex-col min-[1174px]:flex-row min-[1174px]:justify-between">
                         <div class="flex justify-center min-[1174px]:justify-start">
-                            <img class="h-[83px] w-[84px]" src="{{ asset('/images/status-in-progress.png') }}" alt="Status: {{ room.statusString }}"> 
+                            <img class="h-[83px] w-[84px]" src="{{ asset(room.statusImageFilename()) }}" alt="Status: {{ room.statusString }}"> 
                             {# // to pass image to my html.twig I need first to pass their logic path(relative path) to the asset method-> #}
                             <div class="ml-5">
                                 <div class="rounded-2xl py-1 px-3 flex justify-center w-32 items-center bg-amber-400/10">
